color correction & letter spacing

--- a/src/Components/Select.css
+++ b/src/Components/Select.css
@@ -68,6 +68,8 @@ li {
 [data-list-item] {
 	width: 100%;
 	padding: 0.5em;
+	color: #333;
+	letter-spacing: 1px;
 	cursor: pointer;
 	font-weight: 600;
 	line-height: 1.4em;
